Better card display and added local storage so the notes are saved after closing the browser

--- a/notemaster/index.html
+++ b/notemaster/index.html
@@ -22,12 +22,12 @@
               <textarea class="form-control" v-model="note.text"></textarea>
             </div>
           </div>
-          <button type="btn btn-primary" @click="addNote">Submit</button>
+          <button class="btn btn-primary" style="margin: auto; width: 100%" @click="addNote">Submit</button>
         </div>
-        <div class="col-sm-12">
+        <div class="row justify-content-md" style="margin-top: 10px">
           <div class="col-sm-4 note" v-for="(note, index) in notes">
             <div class="card">
-              <button class="close" @click="removeNote(index)"> &times; </button>
+              <button class="close" style="position: absolute; right: 10px; top: 5px; margin-bottom:-20px" @click="removeNote(index)">&times;</button>
               <div class="card-block">
                 <h4 class="card-title">{{note.title}}</h4>
                 <h6 class="card-subtitle mb-2 text-muted">{{note.date}}</h6>
@@ -53,7 +53,8 @@
               text: 'I am so happy',
               date: new Date(Date.now()).toLocaleString()
             }
-          ]
+          ],
+          notes2: []
         },
         methods: {
           addNote(){
@@ -61,11 +62,22 @@
             this.notes.push({
               text,
               title,
-              date:new Date(Date.now()).toLocaleString()
+              date:new Date(Date.now()).toLocaleString(),
             })
           },
           removeNote(index){
             this.notes.splice(index, 1)
+          }
+        },
+        mounted(){
+          if(localStorage.getItem('notes')) this.notes = JSON.parse(localStorage.getItem('notes'));
+        },
+        watch:{
+          notes: {
+            handler(){
+              localStorage.setItem('notes',JSON.stringify(this.notes))
+            },
+            deep: true
           }
         }
       })
